Switched over to custom domain so that push notifications work properly

--- a/gallery.html
+++ b/gallery.html
@@ -37,7 +37,7 @@
 
   <script>
     function sendNotification(title, message) {
-      fetch('/notify', {
+      fetch('https://pinkypromise.us/notify', {
         method: 'POST',
         headers: {
           'Content-Type': 'application/json'
