undoing accidental changes to gallery.html

--- a/gallery.html
+++ b/gallery.html
@@ -37,7 +37,7 @@
 
   <script>
     function sendNotification(title, message) {
-      fetch('http://pinkypromise.onrender.com/notify', {
+      fetch('https://pinkypromise.onrender.com/notify', {
         method: 'POST',
         headers: {
           'Content-Type': 'application/json'
