gets the user for more custom notifications

--- a/gallery.html
+++ b/gallery.html
@@ -11,9 +11,11 @@
   <h1>Our Secret Video Gallery 📹</h1>
     <!-- NEW button section -->
 <div class="button-section">
-  <button onclick="sendNotification('Thinking about you ❤️', 'Isaac visited the website and is thinking about you!')">Thinking about you </button>
-  <button onclick="sendNotification('Peak Please 👀', 'Isaac visited the website and wants to play Peak with you!')">Peak Please</button>
-  <button onclick="sendNotification('Gimme your notes 📝', 'Isaac visited the website and wants you to share your favorite notes!')">Gimme your notes</button>
+  <button onclick="sendNotification('Thinking about you ❤️', user + ' visited the website and is thinking about you!')">Thinking about you </button>
+  <button onclick="sendNotification('Peak Please 👀', user + ' visited the website and wants to play Peak with you!')">Peak Please</button>
+  <button onclick="sendNotification('Gimme your notes 📝', user + ' visited the website and wants you to share your favorite notes!')">Gimme your notes</button>
+  <button onclick="sendNotification('I Miss You 😢', user + ' visited the website and misses you a lot!')">I Miss You</button>
+  <button onclick="sendNotification('Please Answer Hollywood 🎬', user + ' visited the website and is waiting for a response from Hollywood!')">Please Answer Ms. Hollywood</button>
 </div>
 
 
@@ -36,8 +38,9 @@
   </div>
 
   <script>
+    const user = sessionStorage.getItem("user") || "Someone";
     function sendNotification(title, message) {
-      fetch('https://pinkypromise.onrender.com/notify', {
+      fetch('https://pinkypromise.onrender.com/notify', { // change this to server URL or just /notify if testing locally
         method: 'POST',
         headers: {
           'Content-Type': 'application/json'
